[tool.black]
line-length = 120

[tool.coverage.report]
fail_under = 100

[tool.poetry]
name = "chains"
version = "1.0.0"
description = "Python safe navigation for complex objects"
authors = ["Jordan Ambra <jordan@serenity.software>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
black = "^26.3.1"
flake8 = "^7.3.0"
coverage = "^7.13.5"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
