[project]
name = "daisies"
version = "0.1.0"
description = "Python safe navigation for complex objects"
authors = [
    {name = "Jordan Ambra", email = "jordan@serenity.software"},
]
license = "Unlicense"
readme = "README.md"
keywords = ["daisies", "safe navigation", "data access"]
requires-python = ">=3.10,<4.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]

[project.urls]
Repository = "https://github.com/SerenitySoftware/daisies"

[tool.poetry]
packages = [{include = "daisies"}]
exclude = ["daisies/tests"]

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
black = "^26.3.1"
flake8 = "^7.3.0"
coverage = "^7.13.5"

[tool.black]
line-length = 120
target-version = ["py310", "py311", "py312", "py313"]

[tool.coverage.report]
fail_under = 100

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
